rust/tmp.txt


   Compiling squiggle_rust v0.1.0 (/home/nuno/Documents/core/software/fresh/time-to-botec/rust)
warning: variable does not need to be mutable
  --> src/main.rs:18:9
   |
18 |     let mut rng = Pcg64Mcg::seed_from_u64(1);
   |         ----^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0382]: use of moved value: `rng`
  --> src/main.rs:22:19
   |
18 |     let mut rng = Pcg64Mcg::seed_from_u64(1);
   |         ------- move occurs because `rng` has type `Mcg128Xsl64`, which does not implement the `Copy` trait
19 |     // mean 2, standard deviation 3
20 |     let v = model(rng);
   |                   --- value moved here
21 |     println!("{} is from a N(2, 9) distribution", v);
22 |     let z = model(rng);
   |                   ^^^ value used here after move
   |
note: consider changing this parameter type in function `model` to borrow instead if owning the value isn't necessary
  --> src/main.rs:8:19
   |
8  | fn model(mut rng: Pcg64Mcg) -> f64 {
   |    -----          ^^^^^^^^ this parameter takes ownership of the value
   |    |
   |    in this function
help: consider cloning the value if the performance cost is acceptable
   |
20 |     let v = model(rng.clone());
   |                      ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `squiggle_rust` (bin "squiggle_rust") generated 1 warning
error: could not compile `squiggle_rust` (bin "squiggle_rust") due to 1 previous error; 1 warning emitted
